@@ -91,14 +91,58 @@
 .information-container {
     background-color: #fff;
     width: 100%;
-
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    .swiper-container__image{
+        height: 200px;
+        object-fit: contain;
+        box-shadow: 0 0 3px #000;
+        cursor: pointer;
+        transition: transform ease .2s;
+        &:hover{
+            transform: scale(1.1);
+        }
+    }
     ::ng-deep .swiper-pagination-bullet-active {
         border: 0;
         background-color: #282C35;
     }
 
     ::ng-deep .swiper-slide {
+        width: fit-content !important;
         overflow: hidden !important;
+    }
+}
+
+.information-fullscreen-container {
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #fff;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+
+    .information-fullscreen__icon{
+        width: 2.5rem;
+        line-height: 2.5rem;
+        text-align: center;
+        border-radius: 50%;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        z-index: 2;
+        cursor: pointer;
+        background-color: rgba(0, 0, 0, .1);
+        transition: background-color ease .2s;
+        &:hover{
+            background-color: rgba(0, 0, 0, .2);
+        }
+    }
+
+    ::ng-deep .swiper-pagination-bullet-active {
+        border: 0;
+        background-color: #282C35;
     }
 }
 
