@@ -8,6 +8,11 @@
         height: 200px;
         object-fit: contain;
         box-shadow: 0 0 3px #000;
+        cursor: pointer;
+        transition: transform ease .2s;
+        &:hover{
+            transform: scale(1.1);
+        }
     }
 
     ::ng-deep .swiper-pagination-bullet-active {
