@@ -6,12 +6,14 @@ import { ItemInfoComponent } from '@components/item-info/item-info.component';
 import { ItemComponent } from '@elements/item/item.component';
 import { SharedModule } from '../shared/shared.module';
 import { SharedMerchantRoutingModule } from './shared-merchant-routing.module';
+import { MerchantCategoriesComponent } from '@components/mobile/merchant-categories/merchant-categories.component';
 
 
 @NgModule({
   declarations: [
     ItemComponent,
     ItemInfoComponent,
+    MerchantCategoriesComponent,
     FloatBannerComponent],
   imports: [
     CommonModule,
@@ -21,6 +23,7 @@ import { SharedMerchantRoutingModule } from './shared-merchant-routing.module';
   exports: [
     ItemComponent,
     ItemInfoComponent,
+    MerchantCategoriesComponent,
     FloatBannerComponent
   ]
 })
