@@ -4,6 +4,11 @@
 
 - v1.0.1030                                 -
 ---------------------------------------------
+- 2020-07-12                                -
+---------------------------------------------
+.: WSW: Task: Update merchant home page (WSW-71)
+
+---------------------------------------------
 - 2020-07-11                                -
 ---------------------------------------------
 .: WSM: Story: Quick Menu (WSM-158)
